--- a/theory/2. readonly-properties.md
+++ b/theory/2. readonly-properties.md
@@ -27,7 +27,11 @@ const numbers: ReadonlyArray<number> = [1, 2, 3];
 
 ```ts
 class ImmutablePoint {
-    constructor(public readonly x: number, public readonly y: number) {}
+    // public | private | protected | static | readonly
+    constructor(
+        public readonly x: number,
+        public readonly y: number
+    ) {}
 }
 
 const point = new ImmutablePoint(10, 20);
