--- a/theory/5. type-aliases.md
+++ b/theory/5. type-aliases.md
@@ -20,6 +20,8 @@ printValue(123);
 type User = {
     id: number;
     name: string;
+    age?: number;
+    gender?: string;
 };
 
 type Admin = User & {
@@ -36,10 +38,11 @@ const admin: Admin = {
 // Приклад 3. Псевдоніми типів з функціями
 
 ```ts
-type Operation = (a: number, b: number) => number;
+type NumericFn = (a: number, b: number) => number;
+type Operation = (...args: number[]) => number;
 
-const add: Operation = (a, b) => a + b;
-const subtract: Operation = (a, b) => a - b;
+const add: NumericFn = (a, b) => a + b;
+const subtract: NumericFn = (a, b) => a - b;
 
 console.log(add(5, 3)); // 8
 console.log(subtract(5, 3)); // 2
