--- a/theory/6. interface-extension.md
+++ b/theory/6. interface-extension.md
@@ -48,17 +48,19 @@ tesla.charge(); // "Charging..."
 
 ```ts
 interface User {
-    username: string;
+    userName: string;
     password: string;
 }
 
 interface Admin extends User {
     adminPrivileges: string[];
+    isAdmin?: true
 }
 
 const adminUser: Admin = {
-    username: "admin",
+    userName: "admin",
     password: "securepassword",
     adminPrivileges: ["manage_users", "view_reports"],
+    isAdmin: false // error!
 };
 ```
