--- a/theory/8. dynamic-typing-and-interfaces.md
+++ b/theory/8. dynamic-typing-and-interfaces.md
@@ -7,6 +7,8 @@
 
 ```ts
 interface DynamicObject {
+    name: string,
+    age: number
     [key: string]: any; // Дозволяємо будь-який ключ і тип значення
 }
 
