--- a/theory/4.enum.md
+++ b/theory/4.enum.md
@@ -111,3 +111,172 @@ const inProgressTasks = filterTasksByStatus(tasks, TaskStatus.InProgress);
 console.log(inProgressTasks); // [{ id: 2, name: "Task 2", status: "in_progress" }]
 ```
 
+Але є випадки, коли TypeScript **не може автоматично визначити значення в enum**. 
+Це часто трапляється, коли в enum використовуються комбіновані значення, такі як
+змішані числові та рядкові елементи, або коли потрібно точно задати порядок для числових enum.
+
+**_Змішані числові та рядкові значення_**
+
+TypeScript очікує, що всі елементи у числовому enum мають послідовні значення. 
+Якщо ж у enum змішані числові та рядкові значення, TypeScript не може автоматично визначити
+значення для елементів після рядкового, і це потребує явного зазначення значення кожного елемента.
+
+```ts
+enum MixedEnum {
+  A = 1,       // Числове значення
+  B = "value", // Рядкове значення
+  C = 2,       // Помилка: Enum member must have initializer
+}
+```
+У цьому прикладі TypeScript не може визначити значення для C, 
+оскільки після рядкового значення автоматичне присвоєння числових значень припиняється. 
+Щоб це виправити, необхідно явно задати значення для C.
+
+```ts
+enum MixedEnum {
+  A = 1,
+  B = "value",
+  C = 3, // Вказуємо явне значення
+}
+```
+
+**_Пропущені або неявні значення_**
+
+В числовому enum, якщо не вказати значення для першого елемента, він за замовчуванням отримує 0,
+а наступні елементи збільшуються на одиницю. 
+Проте, якщо почати з іншого значення, TypeScript продовжить автоматичне збільшення.
+
+```ts
+enum StatusCode {
+  Success = 200,
+  Redirect,        // 201
+  BadRequest = 400,
+  Unauthorized,    // 401
+}
+```
+Тут Redirect автоматично отримує 201, оскільки StatusCode продовжує рахувати з 200, 
+але Unauthorized також потребує явного зазначення, якщо порядок значень має значення, наприклад:
+```ts
+enum StatusCode {
+  Success = 200,
+  Redirect = 301,  // Ручне встановлення значення
+  BadRequest = 400,
+  Unauthorized = 401,
+}
+```
+Таким чином, коли в enum є змішані або неявні значення, TypeScript не може автоматично
+визначити порядок чи значення.
+
+---------------------------------ДОДАТКОВО-------------------------------------------------------
+
+**_1. Використання бітових прапорців (Bit Flags)_**
+
+Іноді enum використовуються для опису бітових прапорців (bit flags), коли кожен елемент
+представляє значення певного біта. 
+Це дозволяє комбінувати кілька значень одночасно за допомогою побітових операцій. 
+У такому випадку значення елементів задаються вручну, і TypeScript не може їх автоматично визначити.
+
+```ts
+enum FileAccess {
+  Read = 1 << 0,  // 1
+  Write = 1 << 1, // 2
+  Execute = 1 << 2, // 4
+  Delete = 1 << 3, // 8
+}
+
+function checkPermissions(permission: number) {
+  if (permission & FileAccess.Read) {
+    console.log("Read permission granted");
+  }
+  if (permission & FileAccess.Write) {
+    console.log("Write permission granted");
+  }
+}
+
+const permission = FileAccess.Read | FileAccess.Write;
+checkPermissions(permission); 
+// Виведе:
+// "Read permission granted"
+// "Write permission granted"
+```
+У цьому прикладі кожне значення FileAccess представляє окремий біт, а побітова операція | (OR) дозволяє
+поєднувати значення, що зручно для перевірки різних рівнів доступу. 
+TypeScript не може автоматично визначити ці значення, оскільки вони є степенями двійки.
+
+
+**_2. Неявне привласнення значень у рядкових enum_**
+
+Для рядкових enum кожному елементу необхідно призначити значення вручну. 
+На відміну від числових enum, де TypeScript може продовжити послідовність значень автоматично, 
+у рядкових enum для кожного елемента треба вказувати конкретне значення.
+
+```ts
+enum Color {
+  Red = "RED",
+  Green = "GREEN",
+  Blue = "BLUE",
+}
+```
+Тут автоматичного визначення значень не відбувається, тому кожен елемент повинен мати явне значення. 
+Це може здатися обмеженням, але рядкові enum є корисними для уникнення неочікуваних значень, 
+особливо коли важлива точна відповідність рядкових констант.
+
+
+**_3. Проблема з логікою перевірки значень у числових enum**_
+
+Числові enum можуть бути піддані нестандартним значенням, які не належать до визначених у enum. 
+Це може призвести до небажаних результатів, коли значення не відповідає жодному з очікуваних 
+елементів enum. У таких випадках TypeScript не видає помилку, що може спричинити непередбачувану поведінку.
+
+```ts
+enum Status {
+  Active = 1,
+  Inactive,
+  Paused,
+}
+
+function logStatus(status: Status) {
+  if (status === Status.Active) {
+    console.log("Active");
+  } else if (status === Status.Inactive) {
+    console.log("Inactive");
+  } else if (status === Status.Paused) {
+    console.log("Paused");
+  } else {
+    console.log("Unknown status"); // це може трапитися, якщо передати невалідне значення
+  }
+}
+
+logStatus(10); // "Unknown status"
+```
+Це можливо через те, що числові enum у TypeScript є «нестрогими», і можна передати значення, 
+яке не визначене в enum. Щоб обмежити можливі значення, краще використовувати рядкові enum або 
+додаткову перевірку валідності перед обробкою.
+
+
+**_4. Перетворення enum у типи для кращої типізації_**
+
+Іноді enum використовуються як типи для обмеження можливих значень аргументів або властивостей, 
+але можна також створювати «союз» (Union) значень enum, щоб досягти кращої типізації і уникнути 
+передачі невалідних значень у функції.
+
+```ts
+enum Direction {
+  Up = "UP",
+  Down = "DOWN",
+  Left = "LEFT",
+  Right = "RIGHT",
+}
+
+type DirectionType = keyof typeof Direction;
+
+function move(direction: DirectionType) {
+  console.log(`Moving ${Direction[direction]}`);
+}
+
+move("Up"); // працює
+// move("Diagonal"); // Помилка: Argument of type '"Diagonal"' is not assignable to parameter of type 'DirectionType'
+```
+Тут keyof typeof Direction створює тип DirectionType, що обмежує значення до тих, що визначені у enum.
+Це запобігає передачі будь-яких невалідних значень, зберігаючи строгість типізації.
+
